# blog

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml
airflow/dags/: database_monitoring_dag.py
app/: __init__.py  main.py
app/config/: logger.py  settings.py
app/internal/: __init__.py  main.py
app/internal/routers/: __init__.py  blog.py
app/pkg/: session.py  utils.py
app/pkg/common/: __init__.py  model.py  repository.py  router.py  server.py
app/pkg/models/: __init__.py  base.py  mixins.py  models.py
app/pkg/repository/: __init__.py  blog.py
app/pkg/schema/: __init__.py  blog.py
blog/: dto.py  models.py  schema.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/: handler.js
blog/templates/blog/: blog.html  index.html  styles.css
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/migrations/: Dockerfile
migrations/: env.py
migrations/versions/: 2024_10_26_add_blog_1c844d70fe0c.py.py  2024_10_26_add_posts_5c0269b50e0e.py.py  2024_10_26_rename_blog_to_posts_f9c1268ae4b2.py.py  2024_10_27_add_index_to_tittle_and_content_1427714cf6dc.py.py  2024_11_03_add_posts_693de1dd43a6.py
mysite/: settings.py  urls.py
poetry/: pyproject.toml
poetry/airflow/: pyproject.toml  requirements.txt
poetry/api/: pyproject.toml
poetry/migrations/: pyproject.toml
