[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["maxik <kohiry@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
apache-airflow = "^2.10.2"
apache-airflow-providers-postgres = {extras = ["amazon"], version = "^5.13.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
