[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["maxik <kohiry@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
fastapi = "^0.115.3"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
google-re2 = "^1.1.20240702"
pep517 = "^0.13.1"
sqlalchemy = "^2.0.36"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
